user-apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  # If you want to scale out jellyfin there are the options:
  # 1. Use a different database backend than SQLite (currently not supported, may be in future versions)
  # 2. Use a statefulset, but this way each replica will have its own separate database and media library i.e. each replica is a server on its own.
  # 3. Scale vertically by increasing resources limits.
  replicas: 1   # since jellyfin uses SQLite, we need to ensure a single replica for stability
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate  # Because the RWO config PVC cannot be mounted to multiple pods
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [44, 104, 1000]
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.3
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "2000m"
              memory: "3Gi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
              subPath: cache
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache
          emptyDir: {}
